# camera-lidar-project

devel/include/create_node/: BatteryState.h  Create2SensorState.h  Drive.h  RawTurtlebotSensorState.h  RoombaSensorState.h  SetDigitalOutputsRequest.h  SetDigitalOutputsResponse.h  SetTurtlebotModeRequest.h  SetTurtlebotModeResponse.h  Turtle.h  TurtleBotConfig.h  TurtlebotSensorState.h
devel/include/find_object_2d/: ObjectsStamped.h
devel/lib/create_2_motion_handle/: create_2_motion_handle_node
devel/lib/decision_module/: decision_module_node
devel/lib/face_detect_module/: face_detect_module_node
devel/lib/find_object_2d/: find_object_2d  print_objects_detected  tf_example
devel/lib/object_depth_module/: object_depth_module_node
devel/lib/opencv_project/: opencv_project_node
devel/lib/pkgconfig/: create_2_interface.pc  create_description.pc  create_driver.pc  create_node.pc  decision_module.pc  find_object_2d.pc  object_depth_module.pc  opencv_project.pc  publisher_subscriber.pc  robot_localization.pc  turtlebot_dashboard.pc  turtlebot_interactive_markers.pc  turtlebot_navigation.pc  turtlebot_rviz_launchers.pc  video_analytics.pc
devel/lib/publisher_subscriber/: publisher_subscriber_node
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/zed_wrapper/: zed_wrapper_node
src/create_2_motion_handle/: CMakeLists.txt  package.xml
src/decision_module/: CMakeLists.txt  package.xml
src/face_detect_module/: CMakeLists.txt
src/find-object-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Find-Object.cbp  FindObjectConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/object_depth_module/: CMakeLists.txt  darknet  package.xml
src/object_depth_module/ALL_CPP/: activation_layer.cpp  activations.cpp  activations.hpp  avgpool_layer.cpp  avgpool_layer_kernels.cu  batchnorm_layer.cpp  batchnorm_layer.hpp  blas.cpp  blas.hpp  blas_kernels.cu  box.cpp  captcha.cpp  cifar.cpp  classifier.cpp  coco.cpp  col2im_kernels.cu  common_header.hpp  compare.cpp  connected_layer.cpp  connected_layer.hpp  convolutional_layer.cpp  cost_layer.cpp  crnn_layer.cpp  crop_layer.cpp  crop_layer.hpp  crop_layer_kernels.cu  cuda.cpp  darknet.cpp  data.cpp  deconvolutional_kernels.cu  deconvolutional_layer.cpp  deconvolutional_layer.hpp  demo.cpp  detection_layer.cpp  detection_layer.hpp  detector.cpp  dice.cpp  dropout_layer.cpp  dropout_layer.hpp  gemm.cpp  (+35 more)
src/object_depth_module/CPP/: activation_kernels.cu  art.cpp  avgpool_layer.hpp  avgpool_layer_kernels.cu  blas.cpp  blas.hpp  blas_kernels.cu  box.cpp  box.hpp  cifar.cpp  classifier.cpp  col2im.hpp  compare.cpp  connected_layer.cpp  convolutional_layer.cpp  cost_layer.hpp  crnn_layer.hpp  cuda.hpp  darknet.hpp  data.hpp  deconvolutional_kernels.cu  deconvolutional_layer.cpp  deconvolutional_layer.hpp  detection_layer.cpp  dice.cpp  dropout_layer.cpp  dropout_layer_kernels.cu  gemm.cpp  gemm.hpp  im2col.cpp  list.hpp  local_layer.hpp  maxpool_layer.hpp  network.cpp  network.hpp  nightmare.cpp  parser.cpp  parser.hpp  region_layer.cpp  rnn_layer.cpp  (+9 more)
src/object_depth_module/bkp_like_catkin/include/object_depth_module/: activations.h  avgpool_layer.h  box.h  classifier.h  connected_layer.h  convolutional_layer.h  cost_layer.h  cuda.h  darknet.h  data.h  deconvolutional_layer.h  demo.h  depth_computations.hpp  detection_layer.h  gemm.h  gru_layer.h  im2col.h  image.h  list.h  local_layer.h  matrix.h  maxpool_layer.h  normalization_layer.h  object_depth_interface.hpp  parser.h  region_layer.h  reorg_layer.h  rnn_layer.h  shortcut_layer.h  softmax_layer.h  stb_image.h  stb_image_write.h  tree.h
src/object_depth_module/bkp_like_catkin/src/: activation_kernels.cu  activation_layer.c  activations.c  art.c  avgpool_layer.c  avgpool_layer_kernels.cu  batchnorm_layer.c  blas.c  blas_kernels.cu  box.c  captcha.c  cifar.c  classifier.c  coco.c  col2im_kernels.cu  compare.c  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  cost_layer.c  crnn_layer.c  crop_layer.c  crop_layer_kernels.cu  cuda.c  darknet.c  data.c  deconvolutional_kernels.cu  deconvolutional_layer.c  demo.c  detection_layer.c  detector.c  dice.c  dropout_layer.c  dropout_layer_kernels.cu  gemm.c  go.c  gru_layer.c  im2col.c  im2col_kernels.cu  image.c  (+31 more)
src/object_depth_module/bkp_like_original/src/: activation_kernels.cu  activation_layer.c  activation_layer.h  activations.c  art.c  avgpool_layer.c  avgpool_layer_kernels.cu  batchnorm_layer.c  batchnorm_layer.h  blas.c  blas.h  blas_kernels.cu  box.c  box.h  captcha.c  cifar.c  classifier.c  coco.c  col2im.c  col2im.h  col2im_kernels.cu  common_header.h  compare.c  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  cost_layer.c  crnn_layer.c  crnn_layer.h  crop_layer.c  crop_layer.h  crop_layer_kernels.cu  cuda.c  darknet.c  data.c  data.h  deconvolutional_kernels.cu  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  (+51 more)
src/object_depth_module/cfg/: coco.data
src/object_depth_module/include/object_depth_module/: depth_computations.hpp  object_depth_interface.hpp  object_detection.hpp
src/object_depth_module/src/: activation_layer.cpp  activation_layer.hpp  avgpool_layer.cpp  batchnorm_layer.cpp  coco.cpp  col2im.cpp  common_header.hpp  convolutional_kernels.cu  convolutional_layer.hpp  cost_layer.cpp  crnn_layer.cpp  crop_layer.cpp  crop_layer_kernels.cu  cuda.cpp  darknet.cpp  data.cpp  demo.hpp  depth_computations.cpp  detector.cpp  go.cpp  gru_layer.cpp  gru_layer.hpp  image.cpp  image.hpp  kernel_window  layer.cpp  layer.hpp  list.cpp  local_layer.cpp  matrix.cpp  maxpool_layer.cpp  maxpool_layer_kernels.cu  network_kernels.cu  normalization_layer.cpp  normalization_layer.hpp  object_depth_interface.cpp  object_depth_interface.cpp.autosave  object_depth_module_node.cpp  object_detection.cpp  option_list.cpp  (+11 more)
src/opencv_project/: CMakeLists.txt  README.md  package.xml
src/publisher_subscriber/: CMakeLists.txt  package.xml
src/video_analytics/: CMakeLists.txt
(+137 files in other folders)
